Fix on alignment for colocacion title

--- a/assets/sass/layout/_hero.scss
+++ b/assets/sass/layout/_hero.scss
@@ -52,6 +52,7 @@
             padding-top: 0;
             text-align: left;
             line-height: 1.3;
+            margin-left: 0;
           }
 
           .installation-container {
